# BRACFramework

./: .gitignore  BRAC_Implementation_Prompt.md  README.md  pyproject.toml
brac/: __init__.py  attacks.py  hypothesis.py  orchestrator.py  types.py  visualization.py
brac/agents/: __init__.py  base_agent.py  mock_agent.py  trained_agents.py
brac/consensus/: __init__.py  aggregators.py  conformal.py  fisher_rao.py  geometric_median.py  shapley.py  trust.py
brac/data/: __init__.py  dataset.py  loaders.py
brac/evidence/: __init__.py  quality.py
configs/: default.yaml  experiment_byzantine.yaml  experiment_conformal.yaml  experiment_shapley.yaml
data/: README.md
experiments/: __init__.py  compare_approaches.py  eda_and_classification.py  exp1_byzantine_resilience.py  exp2_conformal_coverage.py  exp3_shapley_attribution.py  run_all.py  run_brac_consensus.py
notebooks/: demo.ipynb
scripts/: create_training_dataset.py  merge_multimodal.py  preprocess_bone_marrow.py  preprocess_clinical.py  preprocess_laboratory.py  preprocess_pathology.py  preprocess_radiology.py
tests/: __init__.py  test_conformal.py  test_data_loaders.py  test_fisher_rao.py  test_geometric_median.py  test_orchestrator.py  test_shapley.py  test_trust.py
